// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryModal should render with a subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          [
            [
              {
                "fontFamily": "SourceSansPro-Black",
              },
              {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            {
              "fontSize": 19.664084507042254,
            },
            {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            [
              [
                {
                  "fontFamily": "SourceSansPro-Black",
                },
                {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              {
                "fontSize": 19.664084507042254,
              },
              {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="auto"
          style={
            {
              "height": 77,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "height": 73,
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 16,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "borderColor": "rgba(13, 33, 69, 1)",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "bottom": 0,
                    "left": -3,
                    "position": "absolute",
                    "right": -3,
                    "top": -3,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignSelf": "stretch",
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "left": "-100%",
                    "paddingLeft": "50%",
                    "position": "absolute",
                    "top": 0,
                    "transform": [
                      {
                        "scale": 0.75,
                      },
                      {
                        "translateY": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                    "width": "200%",
                  }
                }
              >
                <Text
                  collapsable={false}
                  numberOfLines={1}
                  style={
                    {
                      "color": "rgba(13, 33, 69, 1)",
                      "fontSize": 20,
                      "includeFontPadding": false,
                      "lineHeight": 20,
                      "textAlign": "left",
                      "textAlignVertical": "top",
                    }
                  }
                >
                  Choose a sub-category
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={false}
                  disableFullscreenUI={true}
                  editable={true}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onChangeText={[Function]}
                  onContentSizeChange={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  returnKeyType="done"
                  selectionColor="#0E4B75"
                  style={
                    [
                      {
                        "flex": 1,
                        "includeFontPadding": false,
                        "margin": 0,
                        "padding": 0,
                        "paddingTop": 0,
                        "textAlign": "left",
                        "textAlignVertical": "top",
                        "top": 2,
                      },
                      {
                        "color": "#25292C",
                        "fontSize": 20,
                        "height": 30,
                      },
                      undefined,
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value="Paycheck"
                />
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 8,
                },
                {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Income: Paycheck",
                "new": true,
                "raw": "Income:Paycheck",
                "selected": true,
              },
              {
                "display": "Exchange: Paycheck",
                "new": true,
                "raw": "Exchange:Paycheck",
                "selected": false,
              },
              {
                "display": "Expense: Paycheck",
                "new": true,
                "raw": "Expense:Paycheck",
                "selected": false,
              },
              {
                "display": "Transfer: Paycheck",
                "new": true,
                "raw": "Transfer:Paycheck",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Income: Paycheck",
                  "new": true,
                  "raw": "Income:Paycheck",
                  "selected": true,
                },
                {
                  "display": "Exchange: Paycheck",
                  "new": true,
                  "raw": "Exchange:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Expense: Paycheck",
                  "new": true,
                  "raw": "Expense:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Transfer: Paycheck",
                  "new": true,
                  "raw": "Transfer:Paycheck",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "data": [
                  {
                    "display": "Income: Paycheck",
                    "new": true,
                    "raw": "Income:Paycheck",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Paycheck",
                    "new": true,
                    "raw": "Exchange:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Paycheck",
                    "new": true,
                    "raw": "Expense:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Transfer: Paycheck",
                    "new": true,
                    "raw": "Transfer:Paycheck",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;

exports[`CategoryModal should render with an empty subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          [
            [
              {
                "fontFamily": "SourceSansPro-Black",
              },
              {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            {
              "fontSize": 19.664084507042254,
            },
            {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            [
              [
                {
                  "fontFamily": "SourceSansPro-Black",
                },
                {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              {
                "fontSize": 19.664084507042254,
              },
              {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  {
                    "fontSize": 19.664084507042254,
                  },
                  {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="auto"
          style={
            {
              "height": 77,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "height": 73,
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 16,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "borderColor": "rgba(13, 33, 69, 1)",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "bottom": 0,
                    "left": -3,
                    "position": "absolute",
                    "right": -3,
                    "top": -3,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignSelf": "stretch",
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "left": "-100%",
                    "paddingLeft": "50%",
                    "position": "absolute",
                    "top": 0,
                    "transform": [
                      {
                        "scale": 1,
                      },
                      {
                        "translateY": 24,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                    "width": "200%",
                  }
                }
              >
                <Text
                  collapsable={false}
                  numberOfLines={1}
                  style={
                    {
                      "color": "rgba(13, 33, 69, 1)",
                      "fontSize": 20,
                      "includeFontPadding": false,
                      "lineHeight": 20,
                      "textAlign": "left",
                      "textAlignVertical": "top",
                    }
                  }
                >
                  Choose a sub-category
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={false}
                  disableFullscreenUI={true}
                  editable={true}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onChangeText={[Function]}
                  onContentSizeChange={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  returnKeyType="done"
                  selectionColor="#0E4B75"
                  style={
                    [
                      {
                        "flex": 1,
                        "includeFontPadding": false,
                        "margin": 0,
                        "padding": 0,
                        "paddingTop": 0,
                        "textAlign": "left",
                        "textAlignVertical": "top",
                        "top": 2,
                      },
                      {
                        "color": "#25292C",
                        "fontSize": 20,
                        "height": 30,
                      },
                      undefined,
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 8,
                },
                {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Exchange: Buy Bitcoin",
                "new": false,
                "raw": "Exchange:Buy Bitcoin",
                "selected": true,
              },
              {
                "display": "Exchange: Sell Bitcoin",
                "new": false,
                "raw": "Exchange:Sell Bitcoin",
                "selected": true,
              },
              {
                "display": "Expense: Air Travel",
                "new": false,
                "raw": "Expense:Air Travel",
                "selected": false,
              },
              {
                "display": "Expense: Alcohol & Bars",
                "new": false,
                "raw": "Expense:Alcohol & Bars",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Exchange: Buy Bitcoin",
                  "new": false,
                  "raw": "Exchange:Buy Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Exchange: Sell Bitcoin",
                  "new": false,
                  "raw": "Exchange:Sell Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Expense: Air Travel",
                  "new": false,
                  "raw": "Expense:Air Travel",
                  "selected": false,
                },
                {
                  "display": "Expense: Alcohol & Bars",
                  "new": false,
                  "raw": "Expense:Alcohol & Bars",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "data": [
                  {
                    "display": "Exchange: Buy Bitcoin",
                    "new": false,
                    "raw": "Exchange:Buy Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Sell Bitcoin",
                    "new": false,
                    "raw": "Exchange:Sell Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Expense: Air Travel",
                    "new": false,
                    "raw": "Expense:Air Travel",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Alcohol & Bars",
                    "new": false,
                    "raw": "Expense:Alcohol & Bars",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;
